fix: aligning svg on crumb element

--- a/src/components/Navegation/style.css
+++ b/src/components/Navegation/style.css
@@ -29,6 +29,11 @@
   gap: 5px;
 }
 
+.crumb-image {
+  width: 15px;
+  height: 15px;
+}
+
 .crumb-name {
   margin: 0;
 
